--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,11 +138,17 @@ header nav ul li a.active::after{
     font-size: 12px;
 }
 
-#products .product .des .price{
+.price{
     padding-top: 10px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 700;
     color: #783950;
+}
+.new-price{
+    padding-top: 10px;
+    font-size: 20px;
+    font-weight: 700;
+    color: rgb(220, 9, 47);
 }
 
 #products .product .des .fa-shopping-cart{
@@ -179,4 +185,41 @@ header nav ul li a.active::after{
 .pagination button:hover{
     background-color: #783950;
     color: #fff;
+}
+.product-img-list{
+    width: 190px;
+    margin-right: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.product-img-list img{
+    width: 100%;
+    object-fit: contain;
+    cursor: pointer;
+}
+.product-description{
+    padding: 20px;
+    width: 500px;
+}
+.product-description h2{
+    font-size: 50px;
+}
+
+.add-btn{
+    border: 1px solid #ac657f;
+    padding: 10px 20px;
+    color: #783950;
+    transition: .8s ease-in-out;
+}
+.add-btn:hover{
+    background-color: #783950;
+    color: #eef5ff;
+}
+.buyNowBtn{
+    border: 1px solid #ac657f;
+    padding: 10px 20px;
+    background-color: #783950;
+    color: #eef5ff;
+    transition: .8s ease-in-out;
 }
