--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,23 @@ header nav ul li a.active::after{
     color: #70686b;
     cursor: pointer;
 }
+.search{
+
+    position: relative;
+}
+.search i{
+    position: absolute;
+    top:8px;
+    right: 8px;
+}
+.search input{
+    padding: 6px 10px;
+    width: 230px;
+    height: 35px;
+    border: 1px solid #eee;
+    border-radius: 10px;
+    outline: none;
+}
 .cart{
     position: relative;
 }
